--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 title: Nuneytoon
 description: Bookmark this and/or share to a friend or colleague that may need some freelance web development!
