--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-architect
+remote_theme: LeNPaul/portfolio-jekyll-theme
+plugins:
+  - jekyll-remote-theme
 title: Nuneytoon
 description: Bookmark this and/or share to a friend or colleague that may need some freelance web development!
