--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ plugins:
   - jekyll-remote-theme
 title: Nuneytoon
 description: Bookmark this and/or share to a friend or colleague that may need some freelance web development!
+favicon: /assets/images/favicon.ico
