--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: LeNPaul/portfolio-jekyll-theme
 plugins:
   - jekyll-remote-theme
-title: Nuneytoon
+title: Portfolio
 description: Bookmark this and/or share to a friend or colleague that may need some freelance web development!
